tests/baselines/reference/parserErrorRecovery_Block1.errors.txt
parserErrorRecovery_Block1.ts(3,5): error TS1109: Expression expected.


==== parserErrorRecovery_Block1.ts (1 errors) ====
    function f() {
        1 + 
        return;
        ~~~~~~
!!! error TS1109: Expression expected.
    }